2016-11-29  Tobias Burnus  <burnus@net-b.de>

PR fortran/58175
	* resolve.c (gfc_resolve_finalizers): Properly detect scalar finalizers.

2016-11-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58175
	* gfortran.dg/finalize_30.f90: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@242960 138bc75d-0d04-0410-961f-82ee72b054a4